<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4cfd"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:autofillHints="@string/hint"
                android:background="#abbb"
                android:hint="@string/hint"
                android:inputType="number"
                android:imeOptions="actionDone"/>

            <TextView
                android:id="@+id/text_d"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                android:text="@string/dice"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:autofillHints="@string/hint"
                android:background="#abbb"
                android:hint="@string/hint"
                android:inputType="number"
                android:imeOptions="actionDone"/>

            <!-- <Spinner
                android:id="@+id/spinner"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="#abbb" /> -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:text="@string/button"
                tools:layout_editor_absoluteX="161dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/button2"
                    tools:layout_editor_absoluteX="161dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/button3"
                    tools:layout_editor_absoluteX="161dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/button">

            <TextView
                android:id="@+id/text_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sum"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.292"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.602" />

            <TextView
                android:id="@+id/num_s"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.635"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.603" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:layout_constraintTop_toBottomOf="@id/sum"
            android:isScrollContainer="false">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#abbb"
                android:textSize="30sp" />

        </ScrollView>

        <Button
            android:id="@+id/logbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_log"
            android:layout_margin="40dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>